# assiniboine

./: .editorconfig  .gitignore  README.md  archive.php  build.ninja  comments.php  files.txt  footer.php  front-page.php  functions.php  header.php  image.php  index.php  package.json  pnpm-lock.yaml  postcss.config.js  search.php  searchform.php  single.php  stack.yaml  tailwind.config.js
assets/sass/01-settings/: file-header.scss  fonts.scss  global.scss
assets/sass/03-generic/: vertical-margins.scss
assets/sass/04-elements/: blockquote.scss  forms.scss  links.scss
assets/sass/05-blocks/paragraph/: _editor.scss  _style.scss
assets/sass/06-components/: comments.scss  entry.scss  footer.scss  header.scss  navigation.scss  single.scss  widgets.scss
build-system/: Main.hs  assiniboine.cabal
classes/: class-twenty-twenty-one-customize.php  class-twenty-twenty-one-svg-icons.php
inc/: menu-functions.php  template-functions.php  template-tags.php
source/: colour-zones.js  editor-style.css  extra-classes.txt  garamond.css  meta.css  style.css  utilities.css
source/base/: forms.css  prose.css
source/components/: blocks.css  comments.css  entry.css  layout.css  navigation.css  recent-posts.css  widgets.css  wpforms.css
template-parts/content/: content-excerpt.php  content-page.php  content-single.php  content.php
template-parts/footer/: footer-widgets.php
template-parts/header/: entry-header.php  excerpt-header.php  site-branding.php  site-header.php  site-nav.php
