cabal-version: 3.0
name:          assiniboine
version:       4.23
author:        Alan Rempel
maintainer:    alan.rempel@gmail.com

executable build
  main-is:          Main.hs
  build-depends:
    , base                  >=4.11
    , optparse-applicative  >=0.15 && <0.17
    , shake                 >=0.19

  default-language: Haskell2010
